2008-08-20  Kevin Ryde  <user42@zip.com.au>

	* textmodes/nroff-mode.el (nroff-mode): Avoid auto-filling on
	directive lines.

2008-08-20  Michael Albinus  <michael.albinus@gmx.de>

	* net/xesam.el (xesam-highlight-string): Precise doc string.
	(xesam-highlight-buffer): New defun.
	(xesam-refresh-entry): Use it.  Better check for sourceModified.

2008-08-19  Chong Yidong  <cyd@stupidchicken.com>

	* edmacro.el (edmacro-parse-keys): Catch events with spaces in
	their names.

2008-08-19  Kenichi Handa  <handa@m17n.org>

	* language/european.el ("Esperanto"): Change the preferred
	charsets to iso-8859-3.

	* language/utf-8-lang.el ("UTF-8"): Add the preferred charsets.

	* international/fontset.el (script-representative-chars): Delete
	the entry for symbol.
	(setup-default-fontset): For symbol characters, don't specify
	:script property.

2008-08-19  Chong Yidong  <cyd@stupidchicken.com>

	* minibuffer.el (completion-table-dynamic): Doc fix.

	* cus-edit.el (custom-toggle-hide): Allow hiding only if widget is
	saved.

2008-08-18  Chong Yidong  <cyd@stupidchicken.com>

	* emulation/edt.el (edt-default-emulation-setup): Share
	global-buffers-menu-map with the emulated global map.

2008-08-18  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* term/ns-win.el (global): Uncomment "put backspace
	ascii-character..." and friends, they are needed for tramp.

2008-08-18  Kenichi Handa  <handa@m17n.org>

	* international/mule-diag.el (font-show-log): Add optional arg N
	to control the limit of font listing.

2008-08-18  Chong Yidong  <cyd@stupidchicken.com>

	* window.el (recenter-top-bottom): Determine top and bottom
	positions using scroll-margin instead of scroll-conservatively.

2008-08-17  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* proced.el (proced-send-signal): Use beginning-of-line.

2008-08-17  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* proced.el (proced-signal-list): Add POSIX 1003.1-2001 signals.