@@ -1,3 +1,8 @@
+2008-08-20  David Reitter  <david.reitter@gmail.com>
+
+	* term/ns-win.el (ns-cursor-blink-rate, ns-cursor-blink-mode): Remove.
+	Patch applied by Adrian Robert.
+
 2008-08-20  Kevin Ryde  <user42@zip.com.au>
 
 	* textmodes/nroff-mode.el (nroff-mode): Avoid auto-filling on
